# UltrastarCreatorTool

./: .gitignore  README.md  build_local.sh
.github/workflows/: build.yml
backend/: analyze_mic_trail.py  audio_analysis.py  backend.spec  download_models.py  main.py  requirements.txt
backend/services/: alignment.py  alignment_whisper.py  bpm_detection.py  pitch_detection.py  reference_comparison.py  ultrastar.py  vocal_separation.py
backend/sessions/: 1b33be9a.json  472465f4.json  48b47602.json  aae8803c.json  f44f1fc9.json
docs/: CHECKLIST.md  COMMANDS.md  PIPELINE_V2.md  TAURI.md  TEST_CHECKLIST.md  ULTRASTAR_GRID_GAP.md
frontend/: package-lock.json  package.json
frontend/src/: App.svelte
frontend/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src/components/: DialogModal.svelte  ProjectLauncher.svelte  SetupScreen.svelte  Step1Upload.svelte  Step2Lyrics.svelte  Step3Generate.svelte  Step4Editor.svelte  Step5Export.svelte  StepNavigation.svelte
frontend/src/lib/: languages.ts
frontend/src/services/: api.js
frontend/src/stores/: appStore.js  dialogStore.js
